New exceptions tests

--- a/pytest.ini
+++ b/pytest.ini
@@ -4,3 +4,4 @@ markers =
     login: Login tests
     positive: All positive Selenium tests
     negative: All negative Selenium tests
+    exceptions: All exceptions tests
